feat: 添加 Spec Dashboard 功能、OpenSpec 服务和 API，并集成任务侧边栏以及相关国际化文本。

--- a/src/lib/i18n/locales/en/messages.json
+++ b/src/lib/i18n/locales/en/messages.json
@@ -3216,6 +3216,42 @@
     ],
     "translation": "tasks.tab.title"
   },
+  "tasks.action.create_failed": {
+    "message": "Failed to create task",
+    "placeholders": {},
+    "comments": [],
+    "origin": [
+      [
+        "src/app/projects/[projectId]/sessions/[sessionId]/components/sessionSidebar/TasksTab.tsx",
+        217
+      ]
+    ],
+    "translation": "Failed to create task"
+  },
+  "tasks.action.created": {
+    "message": "Task created",
+    "placeholders": {},
+    "comments": [],
+    "origin": [
+      [
+        "src/app/projects/[projectId]/sessions/[sessionId]/components/sessionSidebar/TasksTab.tsx",
+        212
+      ]
+    ],
+    "translation": "Task created"
+  },
+  "tasks.action.update_failed": {
+    "message": "Failed to update task",
+    "placeholders": {},
+    "comments": [],
+    "origin": [
+      [
+        "src/app/projects/[projectId]/sessions/[sessionId]/components/sessionSidebar/TasksTab.tsx",
+        234
+      ]
+    ],
+    "translation": "Failed to update task"
+  },
   "user.content.document.pdf": {
     "placeholders": {},
     "comments": [],
