feat: 将应用更名为“SpecForge Viewer”并增强了OpenSpec服务以解析包括设计、任务和规范文件在内的详细变更信息。

--- a/src/lib/i18n/locales/en/messages.json
+++ b/src/lib/i18n/locales/en/messages.json
@@ -3066,7 +3066,7 @@
         96
       ]
     ],
-    "translation": "Claude Code Viewer"
+    "translation": "SpecForge Viewer"
   },
   "tasks.action.create_failed": {
     "message": "Failed to create task",
