--- a/src/lib/i18n/locales/zh_CN/messages.json
+++ b/src/lib/i18n/locales/zh_CN/messages.json
@@ -3066,7 +3066,7 @@
         96
       ]
     ],
-    "translation": "Claude Code Viewer"
+    "translation": "SpecForge Viewer"
   },
   "tasks.action.create_failed": {
     "message": "Failed to create task",
